Revert "Created using Colaboratory"

--- a/DL_Assignment_baseline-2.ipynb
+++ b/DL_Assignment_baseline-2.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/deea-c/DeepLearning_GroupProject/blob/main/DL_Assignment_baseline-2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "xveQIshNWYdc"
       },
       "source": [
@@ -21,17 +11,6 @@
         "You can download the dataset from {https://darwin.v7labs.com/v7-labs/covid-19-chest-x-ray-dataset?sort=priority\\%3Adesc}.\n",
         "The data entitled as '`darwin dataset pull v7-labs/covid-19-chest-x-ray-dataset:all-images`' will be used in this assignment. All dataset consist of 6504 images from 702 classes. We will extract the images of 4 classes (Bacterial Pneumonia, Viral Pneumonia, No Pneumonia (healthy), Covid-19) and save them as .npy file with the following code:"
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "### test "
-      ],
-      "metadata": {
-        "id": "nVpVtkaHw5SJ"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -253,8 +232,7 @@
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "gpuClass": "standard",
     "kernelspec": {
